# shirita

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tdd.md
.github/workflows/: desktop.yml  docker.yml  web.yml
deploy/: entrypoint.sh
docs/: README.md  deploy.md  providers.md  unimplemented-and-gaps.md
docs/superpowers/plans/: 2026-06-12-m0-foundation.md  2026-06-12-m1-minimal-chat.md  2026-06-12-m2-definitions-assembly.md  2026-06-13-m3-frontend-foundation.md  2026-06-13-prompt-tree-1-backend-assembly.md  2026-06-13-prompt-tree-2-extensible-types.md  2026-06-13-prompt-tree-3-frontend-tree.md  2026-06-13-prompt-tree-4-trigger-editor.md  2026-06-13-prompt-tree-5-visual-fixes.md  2026-06-13-prompt-tree-6-st-adapters.md  2026-06-14-m3-book-editor.md  2026-06-14-m3-chat-detail.md  2026-06-14-m3-settings.md  2026-06-14-m3-templates-new-chat.md  2026-06-14-m4-1a-message-tree-backend.md  2026-06-14-m4-1b-message-tree-frontend.md  2026-06-14-m4-2-copy-on-write.md  2026-06-15-m5-1a-variables-backend.md  2026-06-15-m5-1b-variables-frontend.md  2026-06-15-m6-1-budget-summary-infra.md  2026-06-15-m6-2-rolling-summary.md  2026-06-15-m6-3-provider-adapters.md  2026-06-16-i18n-1-infra-switcher.md  2026-06-16-i18n-2-views.md  2026-06-16-i18n-3-components.md  2026-06-16-m7-1-core-parse-codec.md  2026-06-16-m7-2-import-endpoint.md  2026-06-16-m7-3-template-bundle-export.md  2026-06-16-m7-4-frontend.md  2026-06-16-m8-1-tauri-shell-embedded-server.md  2026-06-16-m8-2-packaging-ci.md  2026-06-17-chat-identity.md  2026-06-17-composer-attachments.md  (+35 more)
shirita-core/: Cargo.toml
shirita-core/migrations/: 0001_init.sql  0002_messages_created_at.sql  0003_session_mounts.sql  0004_templates_nodes.sql  0005_session_template_id.sql  0006_settings.sql  0007_prompt_nodes_history.sql  0008_def_types.sql  0009_session_ordering.sql  0010_assets.sql  0011_session_active_leaf.sql  0012_summaries.sql  0013_message_is_anchor.sql  0015_prompt_node_meta.sql  0016_assets_kind.sql  0017_prompt_nodes_pack_content.sql  0018_packs.sql  0019_session_mounted_packs.sql  0020_assets_hash.sql
shirita-core/src/: assembly.rs  attachments.rs  budget.rs  config.rs  conversation.rs  error.rs  hashing.rs  html_patch.rs  identity.rs  keyword.rs  lib.rs  panels.rs  pngcard.rs  portable.rs  seed.rs  state.rs  summarize.rs  tree.rs
shirita-core/src/adapters/: charcard.rs  mod.rs  preset.rs  stpreset.rs  worldinfo.rs
shirita-core/src/model/: anthropic.rs  echo.rs  mod.rs  openai.rs
shirita-core/src/models/: asset.rs  def_type.rs  definition.rs  message.rs  mod.rs  pack.rs  prompt_node.rs  session.rs  summary.rs  template.rs
shirita-core/src/storage/: mod.rs  sqlite.rs
shirita-core/src/tokenizer/: mod.rs  tiktoken.rs
shirita-tauri/: Cargo.toml  tauri.conf.json
shirita-tauri/icons/: icon.icns
shirita-tauri/src/: main.rs
shirita-ui/: .env.example  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shirita-ui/src/: App.vue  i18n.switch.test.ts  i18n.ts  main.ts  styles.css
shirita-ui/src/api/: client.ts  (+3 more)
shirita-web/: Cargo.toml
shirita-web/src/: auth.rs  embed.rs  generations.rs  lib.rs  main.rs  provider_select.rs  state.rs
shirita-web/src/routes/: assets.rs  chat.rs  definitions.rs  export.rs  import_export.rs  local_overrides.rs  messages.rs  mod.rs  overrides.rs  packs.rs  ping.rs  prompt_nodes.rs  provider.rs  regex_rules.rs  sessions.rs  settings.rs  templates.rs  types.rs  variables.rs
shirita-web/static/: index.html
shirita-web/tests/: api_test.rs  assets_hash_test.rs  assets_mounts_test.rs  chat_test.rs  definitions_test.rs  desktop_server_test.rs  embed_ui_test.rs  export_test.rs  import_charcard_test.rs  import_empty_test.rs  import_export_test.rs  import_preset_test.rs  import_preset_v2_test.rs  import_test.rs  local_overrides_test.rs  message_tree_test.rs  node_validation_test.rs  pack_export_test.rs  pack_import_test.rs  packs_test.rs  panels_test.rs  provider_isolation_test.rs  regex_display_test.rs  regex_scopes_test.rs  sessions_mgmt_test.rs  sessions_test.rs  settings_test.rs  summaries_test.rs  template_assembly_test.rs  types_test.rs  variables_test.rs
(+124 files in other folders)
