[workspace]
resolver = "2"
members = ["shirita-core", "shirita-web"]

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tracing = "0.1"
