[package]
name = "shirita-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
sqlx.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
async-stream = "0.3"
tiktoken-rs = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
aho-corasick = "1"
rand = "0.8"
tracing.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
