[package]
name = "shirita-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shirita-core = { path = "../shirita-core" }
shirita-web = { path = "../shirita-web" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# 默认启用 Tauri 自定义协议等运行时能力；保持最小。
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
