[package]
name = "shirita-web"
edition.workspace = true
version.workspace = true

[dependencies]
shirita-core = { path = "../shirita-core" }
axum = "0.8"
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
