[package]
name = "shirita-web"
edition.workspace = true
version.workspace = true

[dependencies]
shirita-core = { path = "../shirita-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
