[package]
name = "shirita-web"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
shirita-core = { path = "../shirita-core" }
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["rt"] }
